--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -36,7 +36,7 @@
   background: #feaf3d;
   border-radius: 8px;
   display: flex;
-  justify-content: space-around;
+  justify-content:space-around ;
   align-items: center;
   margin: 0 auto;
   margin-bottom: 35px;
@@ -48,6 +48,7 @@
   background: #ffffff;
   border-radius: 8px 0px 0px 8px;
   border: none;
+  padding-left: 8px;
 }
 
 .container_button {
@@ -65,8 +66,13 @@
   margin-left: -10px;
 }
 
+.container_button:hover{
+  background:#422755 ;
+}
+
 .container_label {
   font-size: 14px;
+  font-weight: bold;
   color: #fff;
   height: 34px;
   margin-right: 15px;
@@ -149,10 +155,6 @@
   text-align: center;
 }
 
-.card_descricao {
-  font-size: 12px;
-}
-
 .input_card_descricao {
   font-size: 12px;
   margin-top: 5px;
@@ -190,58 +192,10 @@
   font-weight: bold;
 }
 
-.input_card_prazo_atrasado {
-  width: 89px;
-  height: 25px;
-  font-weight: bold;
-  font-size: 12px;
-  color:#f04837;
-  border: none;
-}
-
-.input_card_prazo {
-  font-size: 12px;
-  width: 145px;
-  height: 25px;
-  color:#414141;
-  border: none;
-}
-
-.prioridade,
-.grupo {
-  font-weight: bold;
-  font-size: 12px;
-  border: none;
-}
-
-select:required:invalid {
-  color: gray;
-}
-
-option[value=""][disabled] {
-  display: none;
-}
-
-option {
-  color: black;
-}
-
-.input_card_prioridade {
-  font-size: 12px;
-  border: none;
-}
-
 .card_inclusao {
   font-size: 10px;
   color: #414141;
   margin-top: 5px;
-}
-
-.input_card_inclusao {
-  font-size: 10px;
-  height: 14px;
-  border: none;
-  width: 125px;
 }
 
 i {
@@ -263,6 +217,11 @@ i {
   margin-top: 10px;
 }
 
+.card_button_concluir:hover{
+  background: #6E4B87;
+  ;
+}
+
 .card_button_prazo {
   margin-top: 10px;
   width: 218px;
@@ -278,6 +237,10 @@ i {
   display: none;
 }
 
+.card_button_prazo:hover{
+  background: #c02615;
+}
+
 .card:hover .card_button_prazo {
   display: block;
 }
@@ -285,7 +248,6 @@ i {
 .card:hover .card_button_concluir {
   display: block;
 }
-
 
 .card_button {
   width: 197px;
@@ -295,6 +257,10 @@ i {
   color: #fff;
   border: none;
   margin: 20px 0;
+}
+
+.card_button:hover{
+  background: #422755;
 }
 
 /* Estilização seção dicas */
@@ -339,6 +305,8 @@ i {
 .form_label {
   font-size: 12px;
   color: #757575;
+  margin-left: 8px;
+  margin-bottom: 5px;
 }
 
 .form_input {
@@ -347,11 +315,14 @@ i {
   width: 335px;
   height: 34px;
   border: none;
+  padding-left: 8px;
+  
 }
 
 .button_form {
   align-items: center;
   padding: 15px;
+  margin-top: 5px;
 }
 
 .button_dicas {
@@ -361,6 +332,10 @@ i {
   border-radius: 8px;
   color: #fff;
   border: none;
+}
+
+.button_dicas:hover{
+  background: #422755;
 }
 
 /* Estilização "Sobre" */
@@ -412,3 +387,5 @@ footer {
   font-size: 12px;
   line-height: 20px;
 }
+
+
