reindentação do codigo e ajustes em classes

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -88,22 +88,6 @@
   border: none;
 }
 
-.container_button_tarefa{
- height: 34px;
- width: 79px;
- border-radius: 8px;
- background: #6e4b87;
- color:#fff;
- border: none;
- font-size: 14px;
- font-weight: bold;
- margin-left: 10px;
-}
-
-.container_button_tarefa:hover{
-  background: #422755;
-}
-
 /* Estilização Cards de tarefas */
 
 .container_card {
@@ -167,22 +151,35 @@
   margin-top: 5px;
 }
 
-.input_card_descricao {
+.label_card_descricao {
   font-size: 12px;
-  margin-top: 5px;
+  margin: 5px 0px;
   border: none;
   width: 218px;
   height: 48px;
+  font-family: Open Sans;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 16px;
+  letter-spacing: 0em;
+  text-align: left;
+   ;
 }
 
 .card_prazo_curto {
   font-weight: bold;
   font-size: 12px;
   margin-top: 5px;
-  color: #422755;
-}
+ }
 
 .card_prazo_atrasado {
+  font-weight: bold;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+.card_periodo_atrasado {
   width: 63px;
   height: 14px;
   font-weight: bold;
@@ -196,9 +193,15 @@
   font-weight: bold;
   font-size: 12px;
   margin-top: 5px;
+  
 }
 
 .label_prazo_curto {
+  color: #f04837;
+  font-weight: bold;
+}
+
+.label_prazo {
   color: #f04837;
   font-weight: bold;
 }
@@ -297,7 +300,7 @@ i {
   font-size: 14px;
 }
 
-.test_mudar {
+.dicas_cadastro {
   display: flex;
 }
 
