--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,5 +1,5 @@
 :root {
-  font-family: "Open Sans", sans-serif;
+  font-family: Open Sans; 
 }
 
 /* Estilização Cabeçalho */
@@ -143,6 +143,11 @@
   margin-left: -20px;
 }
 
+.icone{
+  color: #c02615;
+  display: none;
+}
+
 .input_card_tarefa {
   border: none;
   font-weight: bold;
@@ -252,14 +257,17 @@ i {
 
 .card_button_prazo:hover {
   background: #c02615;
+  
 }
 
 .card:hover .card_button_prazo {
   display: block;
+   
 }
 
 .card:hover .card_button_concluir {
   display: block;
+  
 }
 
 .card_button {
@@ -398,4 +406,65 @@ footer {
   height: 100%;
   font-size: 12px;
   line-height: 20px;
+}
+
+/* Estilização Mobile */
+
+@media (max-width: 600px) {
+
+  .container_tasks{
+    width: 100%;
+    height: 146px;
+    display: block;
+  }
+
+  .container_card{
+    width: 210px;
+   
+  }
+
+
+
+  .icone{
+    display: block;
+    text-align: right;
+  }
+
+  .card_button_concluir{
+    display: flex;
+    background:#fff;
+    color: #422755;
+    border:1px solid #422755;
+    font-weight: bold;
+    font-size: 16px;
+    font-family: Open Sans;
+
+  }
+
+  .card_button_concluir > div{
+    display: none;
+  }
+
+  
+.dicas{
+  display: none;
+}
+
+.sobre{
+flex-direction: column;
+flex-wrap: wrap;
+width: 100%;
+align-items: center;
+}
+
+.sobre_imagem{
+  margin-bottom: 50px;
+}
+
+.sobre_text{
+  margin: 0;
+  border: 1px solid red;
+}
+
+
 }
