--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -18,7 +18,6 @@
   font-weight: bold;
   text-align: center;
   padding-top: 50px;
-  
 }
 
 .header_text {
@@ -36,7 +35,6 @@
   align-items: center;
   flex-direction: row;
   padding: 20px;
-  
 }
 
 /* Estilização Container Busca de Tarefas */
@@ -113,7 +111,8 @@
 }
 
 .card_1 {
-  height:360px;
+  min-height: auto;
+  height: 100%;
   border: 1px solid #000;
   border-radius: 14px;
   padding: 10px;
@@ -125,7 +124,8 @@
 }
 
 .card_2 {
-  height:360px;
+  min-height: 300px;
+  height: 100%;
   border: 1px solid #000;
   border-radius: 14px;
   padding: 10px;
@@ -194,13 +194,16 @@
   border: none;
   width: 218px;
   height: 48px;
-  font-family: Open Sans;
   font-size: 12px;
   font-style: normal;
-  font-weight: 400;
   line-height: 16px;
-  letter-spacing: 0em;
   text-align: left;
+}
+
+.card_prazo {
+  font-weight: bold;
+  font-size: 12px;
+  margin-top: 5px;
 }
 
 .card_prazo_curto {
@@ -225,18 +228,12 @@
   text-align: center;
 }
 
-.card_prazo {
-  font-weight: bold;
-  font-size: 12px;
-  margin-top: 5px;
-}
-
-.label_prazo_curto {
+.label_prazo {
   color: #f04837;
   font-weight: bold;
 }
 
-.label_prazo {
+.label_prazo_curto {
   color: #f04837;
   font-weight: bold;
 }
@@ -245,10 +242,6 @@
   font-size: 10px;
   color: #414141;
   margin-top: 5px;
-}
-
-.card_inclusao_mob {
-  display: none;
 }
 
 i {
@@ -272,7 +265,7 @@ i {
 
 .card_button_concluir > div {
   display: inline-flex;
-} 
+}
 
 .card_button_concluir:hover {
   background: #6e4b87;
@@ -297,14 +290,15 @@ i {
   background: #c02615;
 }
 
-.card_1:hover .card_button_prazo, .card_2:hover .card_button_prazo {
+.card_1:hover .card_button_prazo,
+.card_2:hover .card_button_prazo {
   display: block;
- 
 }
 
- .card_1:hover .card_button_concluir, .card_2:hover .card_button_concluir {
+.card_1:hover .card_button_concluir,
+.card_2:hover .card_button_concluir {
   display: block;
-} 
+}
 
 .card_button {
   width: 197px;
@@ -318,6 +312,10 @@ i {
 
 .card_button:hover {
   background: #422755;
+}
+
+.card_inclusao_mob {
+  display: none;
 }
 
 /* Estilização seção dicas */
@@ -422,6 +420,13 @@ i {
   line-height: 19px;
 }
 
+a {
+  font-weight: bold;
+  color: #6e4b87;
+  text-decoration: none;
+  padding: 5px;
+}
+
 /* Estilização do footer */
 
 footer {
@@ -449,18 +454,16 @@ footer {
     height: 160px;
     padding-top: 0;
     font-style: normal;
-
   }
 
   .header_text {
     top: 100px;
-    left: 0; 
+    left: 0;
     transform: none;
     z-index: 3;
     flex-wrap: wrap;
     color: #422755;
     font-size: 16px;
-  
   }
 
   .container_tasks {
@@ -484,23 +487,22 @@ footer {
   }
 
   .card_1 {
-   width: 340px;
-   height: 210px;
+    width: 340px;
+    height: 200px;
     display: grid;
     grid-template-columns: repeat(6, 1fr);
     text-align: left;
-    align-items: center; 
+    align-items: center;
     line-height: 19px;
   }
 
-  .card_2{
-     display: none;
-   }
+  .card_2 {
+    display: none;
+  }
 
-   .alinhamento_mob {
-     margin-left: -60px;
-     display: block;
-     
+  .alinhamento_mob {
+    margin-left: -60px;
+    display: block;
   }
 
   .img_card {
@@ -521,7 +523,7 @@ footer {
     font-size: 20px;
   }
 
-  .label_card_descricao{
+  .label_card_descricao {
     font-size: 11px;
   }
 
@@ -554,7 +556,7 @@ footer {
     display: none;
   }
 
-  .card:hover .card_button_prazo {
+  .card_1:hover .card_button_prazo {
     display: none;
   }
 
@@ -580,5 +582,4 @@ footer {
     width: 309px;
     margin: 0px;
   }
-
 }
